First commit of Ruby Cheatsheet, Arrays, Strings, Integers.

--- a/film/film-1.html
+++ b/film/film-1.html
@@ -2,7 +2,7 @@
 <head>
   <title> think.build </title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="film-1-stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="../content-stylesheet.css">
 </head>
 
 <div id="nameplate">
@@ -11,35 +11,38 @@
   </p>
 </div>
 
+<iframe id="index-of-posts" src="film-index-of-posts.html">
+</iframe>
+
+
 <header>
   Monsters of the Cosmos
 </header>
 
-<nav>
-  <p>Posts</p>
-  <p>March 2015</p>
-  <p><a href="film-1.html">Monsters of the Cosmos</a></p>
-</nav>
-
 <main>
-  <p>2014 was a sabbatical year for me.  One of the adventures I set for myself was to make a planetarium film.
+  <p>Obviously I haven't figured out how to embed video yet! (it works at home!)
+      2014 was a sabbatical year for me.  One of the adventures I set for myself was to make a planetarium film.
   </p>
-  <p>Always start with customer validation so I interiewed planetarium directors.  It turns out they do a lot of school programs.  Sometimes these programs are pretty dry. Sometimes the kids are intimidated or bored. At the same time there's often a few minutes between presentations.
+  <p>Always start with customer validation so I interviewed planetarium directors.  It turns out they do a lot of school programs.  Sometimes these programs are pretty dry. Sometimes the kids are intimidated or bored. At the same time there's often a few minutes between presentations.
   </p>
   <p>
     Thus the idea for <span id="moc"> Monsters of the Cosmos</span> was born.  It would be a science rock video using actual scientists to tell the story of black holes.
   </p>
-    <video controls="" name="media" style="max-width: 100%; max-height: 100%;"><source src="https://www.dropbox.com/s/nuc6na5zclpjmor/Monsters_of_the_Cosmos_1k.mp4?dl=0" type="video/mp4" ></video>
+    <video  width="720" height="720" controls preload>
+        <source src="https://www.dropbox.com/s/ri60aff628bmlo0/Monsters_of_the_Cosmos_720.mp4?dl=0"
+                type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'/>
+    </video>
+    <!--<video controls="" name="media" style="max-width: 100%; max-height: 100%;"><source src="https://www.dropbox.com/s/nuc6na5zclpjmor/Monsters_of_the_Cosmos_1k.mp4?dl=0" type="video/mp4" ></video>-->
 
   <h3>Where to start? </h3>
   <p>
-    I had long been a fan and minor supporter of John Boswell, an incrediblyl talented young composer in Seattle.  I contacted him and gave him a rundown on the planetarium industry. He liked the idea of doing a film for but neither of us knew how to create a video for a screen 5 times larger than IMAX.
+    I had long been a fan and minor supporter of John Boswell, an incredibly talented young composer in Seattle.  I contacted him and gave him a rundown on the planetarium industry. He liked the idea but neither of us knew how to create a video for a screen 5 times larger than IMAX.
   </p>
   <p>
-    Next I recruited Matt Mascheri of Dome3D in Chicago.  I flew them to California where we produced the first 30 seconds of MOC and talked our way into the Morrison Planetarium at the California Academy of Sciences.  It looked good so we finished it.
+    I found my way to Matt Mascheri of Dome3D in Chicago.  He is a master of the art. We met at my house in California where we produced the first 30 seconds of MOC.  We previewed it at the Morrison Planetarium at the California Academy of Sciences. Over the next 3 months we finished it.
   </p>
   <p>
-    MOC has been featured at three film festivals and requested by 150 planetariums.
+    So far, MOC has been featured at three film festivals and requested by 150 planetariums.
     <p>
 
      <p> Mike Farr
