moved cheat sheet to code

--- a/Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html
+++ b/Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html
@@ -49,7 +49,7 @@
     <img id="img-3" src="imgs/arrow.png" alt="+"/>
     Array
 </h1>
-<iframe class="section-style" id="topic-array" src="Array.html"></iframe>
+<iframe class="section-style" id="topic-array" src="array.html"></iframe>
 
 <h1 class="heading-node" onclick="toggle_visible('img-4', 'topic-strings');">
     <img id="img-4" src="imgs/arrow.png" alt="+"/>
