Added Blog 5: RubyMine review.

--- a/ruby_quick_ref/array.html
+++ b/ruby_quick_ref/array.html
@@ -14,6 +14,7 @@
             }
             last = content_name;
             document.getElementById(content_name).style.display = "block";
+            window.top.scrollTo(0,0);
         }
     </script>
 </head>
@@ -69,78 +70,78 @@
     methods
 </h2>
 <div id="methods-list">
-    <h3><a onclick="display_method('shovel');" href="#"><< </a></h3>
+    <h3><a onclick="display_method('shovel');" ><< </a></h3>
 
-    <h3><a onclick="display_method('plus');" href="#">+ </a></h3>
+    <h3><a onclick="display_method('plus');" >+ </a></h3>
 
-    <h3><a onclick="display_method('minus');" href="#">- </a></h3>
+    <h3><a onclick="display_method('minus');" >- </a></h3>
 
-    <h3><a onclick="display_method('multiply');" href="#">* </a></h3>
+    <h3><a onclick="display_method('multiply');" >* </a></h3>
 
-    <h3><a onclick="display_method('all');" href="#">all? </a></h3>
+    <h3><a onclick="display_method('all');" >all? </a></h3>
 
-    <h3><a onclick="display_method('any');" href="#">any?</a></h3>
+    <h3><a onclick="display_method('any');" >any?</a></h3>
 
-    <h3><a onclick="display_method('concat');" href="#">concat </a></h3>
-    <h3><a onclick="display_method('count');" href="#">count </a></h3>
+    <h3><a onclick="display_method('concat');" >concat </a></h3>
+    <h3><a onclick="display_method('count');" >count </a></h3>
 
-    <h3><a onclick="display_method('delete');" href="#">delete </a></h3>
+    <h3><a onclick="display_method('delete');" >delete </a></h3>
 
-    <h3><a onclick="display_method('delete_at');" href="#">delete_at</a></h3>
+    <h3><a onclick="display_method('delete_at');" >delete_at</a></h3>
 
-    <h3><a onclick="display_method('delete_if');" href="#">delete_if</a></h3>
+    <h3><a onclick="display_method('delete_if');" >delete_if</a></h3>
 
-    <h3><a onclick="display_method('each');" href="#">each</a></h3>
+    <h3><a onclick="display_method('each');" >each</a></h3>
 
-    <h3><a onclick="display_method('each_with_index');" href="#">each_with_index</a></h3>
+    <h3><a onclick="display_method('each_with_index');" >each_with_index</a></h3>
 
-    <h3><a onclick="display_method('find');" href="#">find</a></h3>
+    <h3><a onclick="display_method('find');" >find</a></h3>
 
-    <h3><a onclick="display_method('find_all');" href="#">find_all</a></h3>
+    <h3><a onclick="display_method('find_all');" >find_all</a></h3>
 
-    <h3><a onclick="display_method('find_index');" href="#">find_index</a></h3>
+    <h3><a onclick="display_method('find_index');" >find_index</a></h3>
 
-    <h3><a onclick="display_method('first');" href="#">first</a></h3>
+    <h3><a onclick="display_method('first');" >first</a></h3>
 
-    <h3><a onclick="display_method('inject');" href="#">inject</a></h3>
+    <h3><a onclick="display_method('inject');" >inject</a></h3>
 
-    <h3><a onclick="display_method('map');" href="#">map</a></h3>
+    <h3><a onclick="display_method('map');" >map</a></h3>
 
-    <h3><a onclick="display_method('drop');" href="#">drop</a></h3>
+    <h3><a onclick="display_method('drop');" >drop</a></h3>
 
-    <h3><a onclick="display_method('flatten');" href="#">flatten</a></h3>
+    <h3><a onclick="display_method('flatten');" >flatten</a></h3>
 
-    <h3><a onclick="display_method('include?');" href="#">include?</a></h3>
+    <h3><a onclick="display_method('include?');" >include?</a></h3>
 
-    <h3><a onclick="display_method('index');" href="#">index</a></h3>
+    <h3><a onclick="display_method('index');" >index</a></h3>
 
-    <h3><a onclick="display_method('insert');" href="#">insert</a></h3>
+    <h3><a onclick="display_method('insert');" >insert</a></h3>
 
-    <h3><a onclick="display_method('join');" href="#">join</a></h3>
+    <h3><a onclick="display_method('join');" >join</a></h3>
 
-    <h3><a onclick="display_method('length');" href="#">length</a></h3>
+    <h3><a onclick="display_method('length');" >length</a></h3>
 
-    <h3><a onclick="display_method('max');" href="#">max</a></h3>
+    <h3><a onclick="display_method('max');" >max</a></h3>
 
-    <h3><a onclick="display_method('min');" href="#">min</a></h3>
+    <h3><a onclick="display_method('min');" >min</a></h3>
 
-    <h3><a onclick="display_method('minmax');" href="#">minmax</a></h3>
+    <h3><a onclick="display_method('minmax');" >minmax</a></h3>
 
-    <h3><a onclick="display_method('pop');" href="#">pop</a></h3>
+    <h3><a onclick="display_method('pop');" >pop</a></h3>
 
-    <h3><a onclick="display_method('push');" href="#">push</a></h3>
+    <h3><a onclick="display_method('push');" >push</a></h3>
 
-    <h3><a onclick="display_method('select');" href="#">select</a></h3>
+    <h3><a onclick="display_method('select');" >select</a></h3>
 
-    <h3><a onclick="display_method('size');" href="#">size</a></h3>
+    <h3><a onclick="display_method('size');" >size</a></h3>
 
-    <h3><a onclick="display_method('shift');" href="#">shift</a></h3>
+    <h3><a onclick="display_method('shift');" >shift</a></h3>
 
-    <h3><a onclick="display_method('shuffle');" href="#">shuffle</a></h3>
+    <h3><a onclick="display_method('shuffle');" >shuffle</a></h3>
 
-    <h3><a onclick="display_method('take');" href="#">take</a></h3>
+    <h3><a onclick="display_method('take');" >take</a></h3>
 
-    <h3><a onclick="display_method('uniq');" href="#">uniq</a></h3>
+    <h3><a onclick="display_method('uniq');" >uniq</a></h3>
 </div>
 <div id="shovel" class="method-detail">
     <h3><<               shovel operator</h3>
@@ -301,14 +302,12 @@
     <p class="code-paragraph"><span class="Instructions"><span style="font-size:13.0pt; ">let:</span></span>
               <span class="localvar">ar</span> = [<span class="literal">5</span>, <span class="literal">6</span>, <span
                 class="literal">7</span>]</p>
-    <br>
     <p class="code-paragraph">          <span class="localvar">ar</span>.any<span class="command">?</span>{ |<span
             class="parameter">el</span>| <span class="parameter">el</span> &gt; <span class="literal">6 </span>}</p>
 
     <p class="code-paragraph"><span class="Instructions"><span
-            style="font-size:13.0pt; ">returns:</span></span>    <span
+            style="font-size:13.0pt; ">returns:</span></span>   <span
             class="text">true</span></p>
-    <br>
 </div>
 
 <div id="concat" class="method-detail">
@@ -439,7 +438,7 @@
 </div>
 
 <div id="delete_at" class="method-detail">
-<h3>delete_at(<span class="parameter">index</span>)</h3>
+<h3>delete_at (<span class="parameter">index</span>)</h3>
 
     <p class="Default">Deletes the element at <span class="parameter">index</span>.</p>
 
@@ -447,6 +446,7 @@
 
     <p class="Default">Returns the deleted element, or nil if there was no <span
             class="parameter">index'</span>th element.</p>
+    <hr class="rule">
 
     <p class="code-paragraph"><span class="Instructions">let:</span>
                <span class="localvar">ar</span> = [<span class="literal">5</span>,
@@ -507,13 +507,11 @@
     </h3>
 
     <p class="Default">Performs the block on each element of the array. Original array is not modified, thus it's is all about the side effects. </p>
-
-    <p class="Default"><span
-            style="font-family:'Menlo','serif'; font-size:12.0pt; ">Returns the unmodified array.</span><span
-            style="font-family:'Menlo','serif'; font-size:12.0pt; "> </span></p>
+    <p class="Default">Returns the unmodified array.</p>
+    <hr class="rule">
 
     <p class="code-paragraph"><span class="Instructions">let:</span>
-               <span class="localvar">ar</span> = [<span class="string"><span
+              <span class="localvar">ar</span> = [<span class="string"><span
                 style="font-size:10.0pt; ">&quot;Joe&quot;</span></span>, <span class="literal">&quot;</span><span
                 class="string">Fred&quot;</span>, <span class="string">&quot;Sally&quot;</span>]</p>
 
@@ -531,9 +529,8 @@
 
     <p class="code-paragraph"><span class="text">&nbsp;</span></p>
 
-    <p class="code-paragraph"><span class="Instructions"><span style="font-size:13.0pt; ">returns:</span></span>   
-        [<span
-                class="string">&quot;Joe&quot;</span>,
+    <p class="code-paragraph"><span class="Instructions"><span style="font-size:13.0pt; ">returns:</span></span>  
+        [<span class="string">&quot;Joe&quot;</span>,
         <span class="literal">&quot;</span><span class="string">Fred&quot;</span>,
         <span class="string">&quot;Sally&quot;</span>]</p>
 
