switch code to load BlackJack

--- a/Code/code-index-of-posts.html
+++ b/Code/code-index-of-posts.html
@@ -7,7 +7,8 @@
     <nav>
         <p>Posts</p>
         <p>March 2015</p>
-        <p><a href="blog-1.html"> Ruby Cheat Sheet</a></p>
+        <p><a href="Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html"> Ruby Cheat Sheet</a></p>
+        <p><a href="Code/BlackJack.html"> BlackJack Game</a></p>
     </nav>
 
 </main>
