--- a/site-master.html
+++ b/site-master.html
@@ -36,8 +36,8 @@
     <a onclick="reload_iframe('music/music-1.html','385px', '#F9F9F9');" href="#"><br>Music</a>
   </div>
   <div id="nav-button-4">
-    <!--<a onclick="reload_iframe('Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html','505px');" href="#"><br>Code</a>-->
-      <a onclick="reload_iframe('Code/BlackJack/BlackJack.html','505px','#55AA55');" href="#"><br>Code</a>
+    <a onclick="reload_iframe('Code/Ruby_Cheat_Sheet/ruby_cheat_sheet.html','505px');" href="#"><br>Code</a>
+      <!--<a onclick="reload_iframe('Code/BlackJack/BlackJack.html','505px','#55AA55');" href="#"><br>Code</a>-->
   </div >
   <div id="nav-button-5">
     <a onclick="reload_iframe('blog/blog-1.html','625px', '#F9F9F9');" href="#"><br>Blog</a>
