minor changes for display in blog frame

--- a/Code/BlackJack/BlackJack.html
+++ b/Code/BlackJack/BlackJack.html
@@ -25,6 +25,20 @@
         <img class="card" id="dealer_card12" src="PlayingCards/back.png">
     </div>
 
+    <figure id="welcome">
+        <span class="large_definition">Week 2 JavasScript</span>
+        <br>
+        <br>
+        <ul><li> Solo challenge: create a command line game</li>
+            <li> Self challenge: figure out how to create an HTML front end.</li>
+            </ul><p>
+        Cards created from open source artwork by <a href="http://svg-cards.sourceforge.net">David Bellot.</a></li>
+    </p>
+    </figure>
+</p>
+ </div>
+
+</div>
     <div id="user-message-area">
         <p id="user-message"> MESSAGE</p>
         <a onclick="okCommand();" href="#" id="OK-button"><p>OK</p></a>
@@ -65,7 +79,7 @@
     </div>
     <div class="button" id="new-hand-button">
         <a class="button-label" id="new-hand-button-label" href="#"  onclick="newHandCommand(deck, dealer, player);"><p>Deal Again</p></a>
-            Hand</a>
+            </a>
     </div>
 
 
