--- a/ruby_quick_ref/array.html
+++ b/ruby_quick_ref/array.html
@@ -7,7 +7,7 @@
     <link href="code-format.css" rel="stylesheet" type="text/css">
 
     <SCRIPT LANGUAGE="JavaScript">
-        var last = 'shovel'
+        var last = 'shovel';
         function display_method(content_name) {
             if (last != content_name) {
                 document.getElementById(last).style.display = "none"
@@ -21,7 +21,7 @@
 
 <h1>Array</h1>
 <h2>
-    examples
+    simple examples:
 </h2>
 <div id="examples">
     <p class="code-paragraph"><span class="parameter">numbers&nbsp;</span>
@@ -30,7 +30,7 @@
     <p class="code-paragraph"><span class="localvar">strings&nbsp;</span>
         <span class="command">=</span> [<span class="string">&quot;foo&quot;</span>,
         <span class="string">&quot;</span><span class="string">baz</span>&quot;<span class="text">,</span>
-        <span class="string">&quot;boo&quot;</span></span>]</p>
+        <span class="string">&quot;boo&quot;</span>]</p>
 
     <p class="code-paragraph"><span class="localvar">empty_ar</span>
         <span class="command">=</span> []</p>
@@ -39,8 +39,8 @@
             class="Class"> Array.</span></span><span class="command">new</span></p>
 
     <p class="code-paragraph"><span class="localvar">game_board</span> <span style="color:#0432FF; ">=</span>
-        <span class="Class"> Array.</span></span><span class="command">new</span>(<span class="parameter">8</span>) {
-        <span class="Class"> Array</span></span><span style="color:#7F1B80; ">.</span>
+        <span class="Class"> Array.</span><span class="command">new</span>(<span class="parameter">8</span>) {
+        <span class="Class"> Array</span><span style="color:#7F1B80; ">.</span>
         <span class="command">new</span>(<span class="parameter">8</span>) }&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <span class="comment"> #init an 8 x 8 multi-dim array this way.</span></p>
 
@@ -48,12 +48,12 @@
 
     <p class="code-paragraph"><span class="localvar">ar</span>[<span class="parameter">i</span><span
             class="text">]</span> &nbsp;&nbsp;&nbsp;&nbsp;                    <span
-            class="comment"> #=&gt; ith element</span></span></p>
+            class="comment"> #=&gt; ith element</span></p>
 
     <p class="code-paragraph">
         <span class="localvar">ar</span><span
             class="text">[</span><span class="parameter">-2</span><span class="text">]</span>&nbsp;&nbsp;&nbsp;&nbsp;                   
-        <span class="comment"> #=&gt; 2nd from end</span></span>
+        <span class="comment"> #=&gt; 2nd from end</span>
     </p>
 
     <p class="code-paragraph"><span class="localvar">ar</span>[<span class="parameter">1..3</span>] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;              
@@ -67,7 +67,7 @@
 </div>
 <hr>
 <h2>
-    methods
+    here are the methods you'll run into:
 </h2>
 <div id="methods-list">
     <h3><a onclick="display_method('shovel');" ><< </a></h3>
